--- a/scala/scala-akka-poc/pom.xml
+++ b/scala/scala-akka-poc/pom.xml
@@ -30,4 +30,12 @@
 		</plugins>
 	</build>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-actor_2.11</artifactId>
+			<version>2.3.3</version>
+		</dependency>
+	</dependencies>
+
 </project>
